[package]
name = "hotline"
version = "0.1.0"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "Graphics, compute and hardware acellerated A/V decoding"
readme = "readme.md"
homepage = "https://github.com/polymonster/hotline"
repository = "https://github.com/polymonster/hotline"
keywords = ["graphics-engine", "compute", "video-decoding", "hot-reloading", "live-coding"]
categories = ["game-development", "graphics"]
license-file = "license"

[dependencies]
bitflags = "1.3.2"
stb_image_rust = "2.27.2"
stb_image_write_rust = "1.16.1"
font-awesome = "0.2.0"
maths-rs = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.imgui-sys]
version = "0.8.1-alpha.0"
path = "imgui-sys"
features = ["docking"]

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[[bin]]
name = "geometry"
path = "samples/geometry/main.rs"

[[bin]]
name = "triangle"
path = "samples/triangle/main.rs"

[[bin]]
name = "hello_world"
path = "samples/hello_world/main.rs"

[[bin]]
name = "imgui_demo"
path = "samples/imgui_demo/main.rs"

[[bin]]
name = "play_video"
path = "samples/play_video/main.rs"
