[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "hotline-rs"
version = "0.1.8"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "hot-reloading playground for graphics, compute, video decoding and more."
readme = "readme.md"
homepage = "https://github.com/polymonster/hotline"
repository = "https://github.com/polymonster/hotline"
keywords = ["graphics-engine", "compute", "video-decoding", "hot-reloading", "live-coding"]
categories = ["game-development", "graphics"]
license-file = "license"
exclude = ["bin/"]

[dependencies]
bitflags = "1.3.2"
stb_image_rust = "2.27.2"
stb_image_write_rust = "1.16.1"
font-awesome = "0.2.0"
maths-rs = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
rand = "0.8.5"
bevy_ecs = "0.9.1"
hot-lib-reloader = "0.6.4"

[dependencies.imgui-sys]
version = "0.9.0"
features = ["docking"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[[example]]
name = "hello_world"
crate-type = ["bin"]

[[example]]
name = "geometry"
crate-type = ["bin"]

[[example]]
name = "imgui_demo"
crate-type = ["bin"]

[[example]]
name = "play_video"
crate-type = ["bin"]

[[example]]
name = "triangle"
crate-type = ["bin"]