[package]
name = "hotline-rs"
version = "0.3.0"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "A high-performance, hot-reload graphics engine."
readme = "readme.md"
homepage = "https://github.com/polymonster/hotline"
repository = "https://github.com/polymonster/hotline"
keywords = ["graphics-engine", "compute", "video-decoding", "hot-reloading", "live-coding"]
categories = ["game-development", "graphics"]
license-file = "license"
exclude = ["config.user.jsn", "hotline-data"]

[dependencies]
maths-rs = "0.2.3"
bitflags = "1.3.2"
stb_image_rust = "2.27.2"
stb_image_write_rust = "1.16.1"
font-awesome = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
hot-lib-reloader = "0.6.4"
libloading = "0.7.4"
bevy_ecs = "0.10.0"
ddsfile = "0.5.1"

[dependencies.imgui-sys]
version = "0.9.0"
features = ["docking"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.28.0"
winit = "0.29"
objc = "0.2.4"
cocoa = "0.25.0"

[lib]
crate-type = ["rlib", "dylib"]

[features]
build_data = []
client = []
default = ["build_data", "client"]

[[example]]
name = "bindless"
crate-type = ["bin"]

[[example]]
name = "imgui_demo"
crate-type = ["bin"]

[[example]]
name = "play_video"
crate-type = ["bin"]

[[example]]
name = "triangle"
crate-type = ["bin"]

[[bin]]
name = "client"
path = "client/main.rs"
required-features = ["client"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "off"
incremental = true