[package]
name = "htwv"
version = "0.1.0"
edition = "2021"
description = "HLSL to Vulkan to Metal shader compilation toolchain"

[dependencies]
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

# Build dependencies only needed on macOS
[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.65.1"
cmake = "0.1"

[features]
# Use Release build for C++ (faster shader compilation)
cpp-release = []
# For regenerating bindings (developer use only)
generate-bindings = []
