[package]
name = "ecs_examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hotline-rs.workspace = true
export_macros = { path = "../export_macros" }
maths-rs.workspace = true
bevy_ecs.workspace = true
rand = "0.8.5"
rayon = "1"
bitflags.workspace = true
font-awesome.workspace = true
